# WebFrame

./: CMakeLists.txt  README.md  build-helper.js  package.json  vcpkg-configuration.json  vcpkg.json
.github/: free_disk_space.sh
.github/actions/: vcpkg.yml
.github/cache/: action.yml
.github/scripts/: osx_setup.sh  ubuntu_setup.sh
.github/vcpkg/: action.yml  setup.py
.github/workflows/: build.yml  test.yml  vcpkg.yml
include/: webframe.h  webframe.hpp
include/webframe/: webframe.h
ports/: README.md
ports/cef/: CMakeLists.txt  cef-config.cmake  portfile.cmake  usage  vcpkg.json
ports/hyperpage/: fix-missing-cstdint.patch  portfile.cmake  usage  vcpkg.json
ports/megamimes/: CMakeLists.txt  portfile.cmake  vcpkg.json
src/: CMakeLists.txt  webframe.cpp
test/: CMakeLists.txt
